# shadows

./: CMakeLists.txt  README.md  README.txt  main.cpp
src/: ChromacityShadRem.cpp  GeometryShadRem.cpp  GeometryShadRem.h  LrTextureShadRem.cpp  PhysicalShadRem.cpp  PhysicalShadRem.h  SrTextureShadRem.cpp  SrTextureShadRem.h
src/utils/: ConnComp.cpp  ConnCompGroup.cpp  GaborFilter.cpp  GaussianMixtureModel.cpp
